# Database2

./: CMakeLists.txt  README.md
Database/: Backup.txt  CLI.cpp  CLI.h  Column.h  Database.cpp  Database.h  Expression.h  FileOps.cpp  FileOps.h  Parser.cpp  Parser.h  Prerequestion.h  Row.h  Table.h  main.cpp
